--- a/kzen-auto-jvm/src/main/resources/notation/auto-js/document/query.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-js/document/query.yaml
@@ -6,4 +6,18 @@ QueryController:
   type: Query
 
 
+#######################################################################################################################
+
+
+QueryGroup:
+  is: RibbonGroup
+  title: "Insert"
+  documentArchetype: Query
+
 ###########################################################
+
+CsvSourceTool:
+  is: RibbonTool
+  parent: QueryGroup
+  delegate: CsvSource
+
