--- a/kzen-auto-js/package.json
+++ b/kzen-auto-js/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "kzen-auto-js",
   "dependencies": {
     "@material-ui/core": "3.9.2",
     "@material-ui/icons": "3.0.2",
