--- a/kzen-auto-jvm/src/main/resources/notation/auto-common/common-document.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-common/common-document.yaml
@@ -26,7 +26,7 @@ Script:
 Query:
   is: Document
   class: tech.kzen.auto.common.objects.document.QueryDocument
-  icon: TableChart
+  icon: Search
   sources: []
   meta:
     sources:
