--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,13 @@
 javaVersion=1.8
-
 kotlinVersion=1.3.20
+#kotlinVersion=1.3.21
 
 
-#kzenLibVersion=0.4.5
 kzenLibVersion=0.5.0-SNAPSHOT
+#kzenLibVersion=0.5.0
 
 
-kotlinxIoVersion=0.1.4
+kotlinxIoVersion=0.1.7
 guavaVersion=27.1-jre
 
 #seleniumVersion=3.14.0
@@ -18,16 +18,15 @@ kotlinxCoroutinesCoreVersion=1.1.1
 kotlinxHtmlVersion=0.6.12
 
 # TODO: update when latest language version variant is available
-#reactVersion=16.5.2-pre.58-kotlin-1.3.0
-#reactDomVersion=16.5.2-pre.58-kotlin-1.3.0
-#kotlinStyledVersion=1.0.0-pre.58-kotlin-1.3.0
+#reactVersion=16.6.0-pre.70-kotlin-1.3.21
+#reactDomVersion=16.6.0-pre.70-kotlin-1.3.21
+#kotlinStyledVersion=1.0.0-pre.70-kotlin-1.3.21
 reactVersion=16.6.0-pre.68-kotlin-1.3.20
 reactDomVersion=16.6.0-pre.68-kotlin-1.3.20
 kotlinStyledVersion=1.0.0-pre.68-kotlin-1.3.20
 
 
-
-nodePluginVersion=1.2.0
+nodePluginVersion=1.3.1
 
 # https://github.com/srs/gradle-node-plugin/issues/143
 org.gradle.daemon=false
