--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
 javaVersion=1.8
-kotlinVersion=1.3.20
-#kotlinVersion=1.3.21
+#kotlinVersion=1.3.20
+kotlinVersion=1.3.21
 
 
-kzenLibVersion=0.5.0-SNAPSHOT
-#kzenLibVersion=0.5.0
+#kzenLibVersion=0.5.0-SNAPSHOT
+kzenLibVersion=0.5.0
 
 
 kotlinxIoVersion=0.1.7
@@ -17,7 +17,7 @@ kotlinxCoroutinesCoreVersion=1.1.1
 
 kotlinxHtmlVersion=0.6.12
 
-# TODO: update when latest language version variant is available
+# TODO: update when latest version works
 #reactVersion=16.6.0-pre.70-kotlin-1.3.21
 #reactDomVersion=16.6.0-pre.70-kotlin-1.3.21
 #kotlinStyledVersion=1.0.0-pre.70-kotlin-1.3.21
