--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ buildscript {
 
 subprojects {
     group = 'tech.kzen.auto'
-    version = '0.5.1'
+    version = '0.6.0-SNAPSHOT'
 
     repositories {
         mavenLocal()
