refactoring, query row/column progress

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,12 @@
-javaVersion=1.8
-#kotlinVersion=1.3.20
-kotlinVersion=1.3.21
+#javaVersion=1.8
+javaVersion=11
+#kotlinVersion=1.3.21
+kotlinVersion=1.3.30
 nodePluginVersion=1.3.1
 
 
-#kzenLibVersion=0.5.0-SNAPSHOT
-kzenLibVersion=0.5.0
+kzenLibVersion=0.6.0-SNAPSHOT
+#kzenLibVersion=0.5.0
 
 
 kotlinxIoVersion=0.1.7
