--- a/kzen-auto-jvm/src/main/resources/notation/auto-common/common-document.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-common/common-document.yaml
@@ -27,9 +27,9 @@ Query:
   is: Document
   class: tech.kzen.auto.common.objects.document.QueryDocument
   icon: Search
-  sources: []
+  vertices: []
   meta:
-    sources:
+    vertices:
       is: List
-      of: Action
+      of: Dataflow
 
