--- a/kzen-auto-jvm/src/main/resources/notation/auto-js/document/query.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-js/document/query.yaml
@@ -16,8 +16,20 @@ QueryGroup:
 
 ###########################################################
 
-CsvSourceTool:
+#CsvSourceTool:
+#  is: RibbonTool
+#  parent: QueryGroup
+#  delegate: CsvSource
+
+
+IntRangeSourceTool:
   is: RibbonTool
   parent: QueryGroup
-  delegate: CsvSource
+  delegate: IntRangeSource
+
+
+CountSinkTool:
+  is: RibbonTool
+  parent: QueryGroup
+  delegate: CountSink
 
