--- a/kzen-auto-jvm/src/main/resources/notation/auto-js/project.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-js/project.yaml
@@ -30,7 +30,7 @@ RibbonController:
       is: List
       of: ObjectLocation
       by: AutowiredNominal
-      find: Action
+      for: Action
     ribbonGroups:
       is: List
       of: RibbonGroup
