--- a/kzen-auto-jvm/src/main/resources/notation/action/action-browser.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/action/action-browser.yaml
@@ -5,7 +5,7 @@
 OpenBrowser:
   abstract: true
   is: Action
-  class: tech.kzen.auto.server.objects.OpenBrowser
+  class: tech.kzen.auto.server.objects.script.OpenBrowser
   icon: OpenInNew
   title: "Open browser"
   description: "Open a new browser window"
@@ -20,7 +20,7 @@ OpenBrowser:
 CloseBrowser:
   abstract: true
   is: Action
-  class: tech.kzen.auto.server.objects.CloseBrowser
+  class: tech.kzen.auto.server.objects.script.CloseBrowser
   icon: Close
   title: "Close browser"
   description: "Close a browser window"
@@ -29,7 +29,7 @@ CloseBrowser:
 GoTo:
   abstract: true
   is: Action
-  class: tech.kzen.auto.server.objects.GoTo
+  class: tech.kzen.auto.server.objects.script.GoTo
   location: "https://www.google.com/"
   icon: Http
   title: "Browse to URL"
@@ -41,7 +41,7 @@ GoTo:
 LeftClick:
   abstract: true
   is: Action
-  class: tech.kzen.auto.server.objects.LeftClick
+  class: tech.kzen.auto.server.objects.script.LeftClick
   icon: TouchApp
   title: "Click"
   xpath: ""
@@ -52,7 +52,7 @@ LeftClick:
 SendKeys:
   abstract: true
   is: Action
-  class: tech.kzen.auto.server.objects.SendKeys
+  class: tech.kzen.auto.server.objects.script.SendKeys
   icon: Keyboard
   title: "Type"
   xpath: ""
@@ -65,7 +65,7 @@ SendKeys:
 FormSubmit:
   abstract: true
   is: Action
-  class: tech.kzen.auto.server.objects.FormSubmit
+  class: tech.kzen.auto.server.objects.script.FormSubmit
   icon: Send
   title: "Submit"
   xpath: ""
