query row/column progress, added VertexInfo / VertexMatrix

--- a/gradle.properties
+++ b/gradle.properties
@@ -11,6 +11,7 @@ kzenLibVersion=0.6.0-SNAPSHOT
 
 kotlinxIoVersion=0.1.7
 guavaVersion=27.1-jre
+dexxVersion=0.7
 
 #seleniumVersion=3.14.0
 seleniumVersion=3.141.59
