--- a/kzen-auto-jvm/build.gradle
+++ b/kzen-auto-jvm/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-webflux')
     compile('com.fasterxml.jackson.module:jackson-module-kotlin')
     compile "com.google.guava:guava:$guavaVersion"
+    compile group: 'com.github.andrewoma.dexx', name: 'collection', version: dexxVersion
 
     compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: seleniumVersion
 
