query pipe progress

--- a/kzen-auto-jvm/src/main/resources/notation/auto-js/document/query.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-js/document/query.yaml
@@ -33,3 +33,11 @@ CountSinkTool:
   parent: QueryGroup
   delegate: CountSink
 
+
+###########################################################
+
+DownPipeTool:
+  is: RibbonTool
+  parent: QueryGroup
+  delegate: DownPipe
+
