--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,7 @@
-#javaVersion=1.8
-javaVersion=11
+# TODO: IntelliJ on Windows 10 doesn't like 11?
+javaVersion=1.8
+#javaVersion=11
+
 #kotlinVersion=1.3.21
 kotlinVersion=1.3.30
 nodePluginVersion=1.3.1
