--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
-# TODO: IntelliJ on Windows 10 doesn't like 11?
-javaVersion=1.8
-#javaVersion=11
+# TODO: IntelliJ on Windows 10 with Kotlin 1.3.30 doesn't like 11?
+#javaVersion=1.8
+javaVersion=11
 
 #kotlinVersion=1.3.21
 kotlinVersion=1.3.30
