--- a/kzen-auto-jvm/src/main/resources/notation/auto-js/document/query.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-js/document/query.yaml
@@ -34,6 +34,12 @@ PrimeFilterTool:
   delegate: PrimeFilter
 
 
+DivisibleFilterTool:
+  is: RibbonTool
+  parent: QueryGroup
+  delegate: DivisibleFilter
+
+
 CountSinkTool:
   is: RibbonTool
   parent: QueryGroup
