--- a/gradle.properties
+++ b/gradle.properties
@@ -7,8 +7,8 @@ kotlinVersion=1.3.30
 nodePluginVersion=1.3.1
 
 
-kzenLibVersion=0.6.0-SNAPSHOT
-#kzenLibVersion=0.5.0
+#kzenLibVersion=0.6.0-SNAPSHOT
+kzenLibVersion=0.6.0
 
 
 kotlinxIoVersion=0.1.7
