--- a/kzen-auto-js/package.json
+++ b/kzen-auto-js/package.json
@@ -23,7 +23,8 @@
     "mocha": "6.1.4",
     "style-loader": "0.23.1",
     "watchify": "3.11.1",
-    "webpack": "3.11.0"
+    "webpack": "^4.32.2",
+    "webpack-cli": "^3.3.2"
   },
   "scripts": {
     "start": "webpack",
