--- a/gradle.properties
+++ b/gradle.properties
@@ -2,13 +2,12 @@
 #javaVersion=1.8
 javaVersion=11
 
-#kotlinVersion=1.3.21
 kotlinVersion=1.3.30
 nodePluginVersion=1.3.1
 
 
-#kzenLibVersion=0.6.0-SNAPSHOT
-kzenLibVersion=0.6.0
+kzenLibVersion=0.7.0-SNAPSHOT
+#kzenLibVersion=0.6.0
 
 
 kotlinxIoVersion=0.1.7
