basic pipe drawing works

--- a/kzen-auto-jvm/src/main/resources/notation/auto-js/document/query.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-js/document/query.yaml
@@ -61,8 +61,26 @@ TopToBottomPipeTool:
   delegate: TopToBottomPipe
 
 
+TopToBottomAndRightPipeTool:
+  is: RibbonTool
+  parent: PipeGroup
+  delegate: TopToBottomAndRightPipe
+
+
 TopToRightPipeTool:
   is: RibbonTool
   parent: PipeGroup
   delegate: TopToRightPipe
+
+
+LeftToBottomPipeTool:
+  is: RibbonTool
+  parent: PipeGroup
+  delegate: LeftToBottomPipe
+
+
+LeftToBottomAndRightPipeTool:
+  is: RibbonTool
+  parent: PipeGroup
+  delegate: LeftToBottomAndRightPipe
 
