multiple inputs work

--- a/kzen-auto-jvm/src/main/resources/notation/auto-js/document/query.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-js/document/query.yaml
@@ -53,6 +53,18 @@ CountSinkTool:
   delegate: CountSink
 
 
+AccumulateSinkTool:
+  is: RibbonTool
+  parent: QueryGroup
+  delegate: AccumulateSink
+
+
+AppendTextTool:
+  is: RibbonTool
+  parent: QueryGroup
+  delegate: AppendText
+
+
 ###########################################################
 
 TopToBottomPipeTool:
