improved vertex display name, renamed AppendText first/second -> prefix/suffix, removed PrimeFilter, improved vertex titles and icons, added icons for pipes

--- a/kzen-auto-jvm/src/main/resources/notation/auto-js/document/query.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-js/document/query.yaml
@@ -35,10 +35,10 @@ IntRangeSourceTool:
   delegate: IntRangeSource
 
 
-PrimeFilterTool:
-  is: RibbonTool
-  parent: QueryGroup
-  delegate: PrimeFilter
+#PrimeFilterTool:
+#  is: RibbonTool
+#  parent: QueryGroup
+#  delegate: PrimeFilter
 
 
 DivisibleFilterTool:
