--- a/gradle.properties
+++ b/gradle.properties
@@ -2,32 +2,32 @@
 #javaVersion=1.8
 javaVersion=11
 
-kotlinVersion=1.3.30
+#kotlinVersion=1.3.30
+kotlinVersion=1.3.31
 nodePluginVersion=1.3.1
 
 
-kzenLibVersion=0.7.0-SNAPSHOT
-#kzenLibVersion=0.6.0
+kzenLibVersion=0.7.0
+#kzenLibVersion=0.7.0-SNAPSHOT
 
 
 kotlinxIoVersion=0.1.7
 guavaVersion=27.1-jre
 dexxVersion=0.7
 
-#seleniumVersion=3.14.0
 seleniumVersion=3.141.59
 
-kotlinxCoroutinesCoreVersion=1.1.1
+kotlinxCoroutinesCoreVersion=1.2.1
 
 kotlinxHtmlVersion=0.6.12
 
 # TODO: update when latest version works
-#reactVersion=16.6.0-pre.70-kotlin-1.3.21
-#reactDomVersion=16.6.0-pre.70-kotlin-1.3.21
-#kotlinStyledVersion=1.0.0-pre.70-kotlin-1.3.21
-reactVersion=16.6.0-pre.68-kotlin-1.3.20
-reactDomVersion=16.6.0-pre.68-kotlin-1.3.20
-kotlinStyledVersion=1.0.0-pre.68-kotlin-1.3.20
+reactVersion=16.6.0-pre.71-kotlin-1.3.31
+reactDomVersion=16.6.0-pre.71kotlin-1.3.31
+kotlinStyledVersion=1.0.0-pre.71-kotlin-1.3.31
+#reactVersion=16.6.0-pre.68-kotlin-1.3.20
+#reactDomVersion=16.6.0-pre.68-kotlin-1.3.20
+#kotlinStyledVersion=1.0.0-pre.68-kotlin-1.3.20
 
 # https://github.com/srs/gradle-node-plugin/issues/143
 org.gradle.daemon=false
