--- a/gradle.properties
+++ b/gradle.properties
@@ -1,18 +1,17 @@
-# TODO: IntelliJ on Windows 10 with Kotlin 1.3.30 doesn't like 11?
-#javaVersion=1.8
 javaVersion=11
 
-#kotlinVersion=1.3.30
-kotlinVersion=1.3.31
+#kotlinVersion=1.3.31
+kotlinVersion=1.3.40
+nodeVersion=12.4.0
 nodePluginVersion=1.3.1
 
 
-kzenLibVersion=0.7.0
-#kzenLibVersion=0.8.0-SNAPSHOT
+#kzenLibVersion=0.7.0
+kzenLibVersion=0.8.0-SNAPSHOT
 
 
-kotlinxIoVersion=0.1.7
-guavaVersion=27.1-jre
+kotlinxIoVersion=0.1.10
+guavaVersion=28.0-jre
 dexxVersion=0.7
 
 seleniumVersion=3.141.59
@@ -21,10 +20,12 @@ kotlinxCoroutinesCoreVersion=1.2.1
 
 kotlinxHtmlVersion=0.6.12
 
-# TODO: update when latest version works
-reactVersion=16.6.0-pre.71-kotlin-1.3.31
-reactDomVersion=16.6.0-pre.71kotlin-1.3.31
-kotlinStyledVersion=1.0.0-pre.71-kotlin-1.3.31
+reactVersion=16.6.0-pre.72-kotlin-1.3.40
+reactDomVersion=16.6.0-pre.72-kotlin-1.3.40
+kotlinStyledVersion=1.0.0-pre.72-kotlin-1.3.40
+#reactVersion=16.6.0-pre.71-kotlin-1.3.31
+#reactDomVersion=16.6.0-pre.71kotlin-1.3.31
+#kotlinStyledVersion=1.0.0-pre.71-kotlin-1.3.31
 
 # https://github.com/srs/gradle-node-plugin/issues/143
 org.gradle.daemon=false
