added RepeatProcessor, improved repeated message pipe colouring, slowed down loop for QueryRunController pause issue

--- a/kzen-auto-jvm/src/main/resources/notation/auto-js/document/query.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-js/document/query.yaml
@@ -53,6 +53,12 @@ ReplaceProcessorTool:
   delegate: ReplaceProcessor
 
 
+RepeatProcessorTool:
+  is: RibbonTool
+  parent: QueryGroup
+  delegate: RepeatProcessor
+
+
 CountSinkTool:
   is: RibbonTool
   parent: QueryGroup
