added TextLiteral, DisplayValue progress, improved Graph icon, exposed imperativeModel to ExecutionAction.perform

--- a/kzen-auto-jvm/src/main/resources/notation/auto-common/common-document.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-common/common-document.yaml
@@ -24,11 +24,10 @@ Script:
 
 
 Graph:
-#Query:
   is: Document
   class: tech.kzen.auto.common.objects.document.query.QueryDocument
-#  icon: Search
-  icon: CallSplit
+#  icon: CallSplit
+  icon: DeviceHub
   vertices: []
   edges: []
   meta:
