factored out AttributeController

--- a/kzen-auto-jvm/src/main/resources/notation/auto-js/project.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-js/project.yaml
@@ -76,5 +76,6 @@ StageController:
 DocumentController:
   abstract: true
   is: ReactWrapper
+  attributeController: AttributeController
   meta:
     type: Document
