--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,6 @@
 javaVersion=11
 
-#kotlinVersion=1.3.31
-kotlinVersion=1.3.40
+kotlinVersion=1.3.41
 nodeVersion=12.4.0
 nodePluginVersion=1.3.1
 
@@ -20,12 +19,12 @@ kotlinxCoroutinesCoreVersion=1.2.1
 
 kotlinxHtmlVersion=0.6.12
 
-reactVersion=16.6.0-pre.72-kotlin-1.3.40
-reactDomVersion=16.6.0-pre.72-kotlin-1.3.40
-kotlinStyledVersion=1.0.0-pre.72-kotlin-1.3.40
-#reactVersion=16.6.0-pre.71-kotlin-1.3.31
-#reactDomVersion=16.6.0-pre.71kotlin-1.3.31
-#kotlinStyledVersion=1.0.0-pre.71-kotlin-1.3.31
+#reactVersion=16.6.0-pre.72-kotlin-1.3.40
+#reactDomVersion=16.6.0-pre.72-kotlin-1.3.40
+#kotlinStyledVersion=1.0.0-pre.72-kotlin-1.3.40
+reactVersion=16.6.0-pre.77-kotlin-1.3.41
+reactDomVersion=16.6.0-pre.77-kotlin-1.3.41
+kotlinStyledVersion=1.0.0-pre.77-kotlin-1.3.41
 
 # https://github.com/srs/gradle-node-plugin/issues/143
 org.gradle.daemon=false
