factored out SelectStepEditor, display value selection progress, updated client dependencies, added react-select js dependency

--- a/kzen-auto-jvm/src/main/resources/notation/auto-js/document/script.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto-js/document/script.yaml
@@ -6,6 +6,11 @@ ScriptController:
   type: Script
 
 
+SelectStepEditor:
+  is: AttributeEditorWrapper
+  class: tech.kzen.auto.client.objects.document.script.action.SelectStepEditor$Wrapper
+
+
 #######################################################################################################################
 
 
