--- a/kzen-auto-js/package.json
+++ b/kzen-auto-js/package.json
@@ -8,6 +8,7 @@
     "lodash": "4.17.11",
     "react": "16.8.6",
     "react-dom": "16.8.6",
+    "react-select": "2.4.2",
     "styled-components": "4.3.2"
   },
   "devDependencies": {
